Fix: the text does not fit in the button
https://github.com/openstreetmap/openstreetmap-website/issues/1353

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -2163,7 +2163,7 @@ a.button {
     border-radius: 0;
     margin:0;
     min-width: 75px;
-    max-width: 180px;
+    max-width: 100%;
     border-right:1px solid white;
     text-overflow: ellipsis;
     white-space: nowrap;
